# manufacture

./: .copier-answers.yml  .coveragerc  .eslintrc.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  README.md  __openerp__.py  mrp.py  mrp_bom_product_details.xml  oca_dependencies.txt  test-requirements.txt
account_move_line_manufacture_info/: README.rst  __manifest__.py
account_move_line_mrp_info/: README.rst  __manifest__.py  hooks.py
base_repair/: README.rst  __manifest__.py
base_repair_config/: README.rst  __manifest__.py
i18n/: es.po
machine_manager/: README.rst  __init__.py  __openerp__.py
manufacturing_order_type/: README.rst
manufacturing_production_report/: __init__.py  __openerp__.py
models/: __init__.py  mrp_bom.py  res_config.py
mrp_2_steps_consumed_qty_sync/: README.rst  __manifest__.py
mrp_account_analytic/: README.rst  __manifest__.py
mrp_account_analytic_wip/: __manifest__.py
mrp_account_bom_attribute_match/: README.rst  __manifest__.py
mrp_account_material_wip/: README.rst  __manifest__.py
mrp_account_reconcile/: __manifest__.py
mrp_account_work_order_wip/: __manifest__.py
mrp_analytic_cost/: README.rst  __manifest__.py
mrp_analytic_cost_material/: README.rst  __manifest__.py
mrp_analytic_cost_operation/: README.rst  __manifest__.py
mrp_analytic_cost_operation_variance/: README.rst  __manifest__.py
mrp_analytic_cost_variance/: README.rst  __manifest__.py
mrp_attachment_mgmt/: README.rst  __manifest__.py
mrp_auto_assign/: README.rst  __manifest__.py
mrp_auto_create_lot/: README.rst  __init__.py  __manifest__.py
mrp_barcode/: README.rst  __init__.py  __manifest__.py
mrp_bom_attribute_match/: README.rst  __manifest__.py
mrp_bom_attribute_match_duplicate_kit/: README.rst  __manifest__.py
mrp_bom_attribute_match_semifinished_product/: README.rst  __manifest__.py
mrp_bom_image/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+5781 files in other folders)
